💄 Fix uneven padding on desktop navbar

--- a/src/style.styl
+++ b/src/style.styl
@@ -238,7 +238,7 @@ nav
 		margin 0
 		// + .2em: compensate for text not sticking to the top of its bounding box.
 		// vertical-align: top doesn't seem to fix the problem
-		padding 0.5em 0.5em + 0.2em 0 0
+		padding 0.5em 1rem 0 0
 		align-items end
 		flex-direction column
 
